feat: get geoloc from link
